💄 Change container height (fix invisible button)

--- a/stories/components/login/Login.module.css
+++ b/stories/components/login/Login.module.css
@@ -13,7 +13,7 @@
   overflow: hidden;
   position: relative;
   width: 900px;
-  height: 465px;
+  height: 480px;
   background: #fff;
   font-family: "Open Sans", Helvetica, Arial, sans-serif;
   border-radius: 1.4rem;
